@@ -22,9 +22,11 @@ import java.util.concurrent.Executor;
 public final class P2pManager {
     private static final Logger LOGGER = LoggerFactory.getLogger(P2pManager.class);
     private static final P2pManager INSTANCE = new P2pManager();
-    private static final Executor BACKGROUND_EXECUTOR = command -> Thread.ofVirtual()
-        .name("safra-p2p-background")
-        .start(command);
+    private static final Executor BACKGROUND_EXECUTOR = command -> {
+        Thread thread = new Thread(command, "safra-p2p-background");
+        thread.setDaemon(true);
+        thread.start();
+    };
 
     private volatile P2pHostService hostService;
     private volatile P2pHostService startingHostService;
